chore: refine enum parse validation handling
Agent-Logs-Url: https://github.com/dylanmcgovern919/DylansYardSale/sessions/4590a460-54e8-4aac-bf31-44c8771bf5a9

Co-authored-by: dylanmcgovern919 <218416302+dylanmcgovern919@users.noreply.github.com>